--- a/WebContent/venta.html
+++ b/WebContent/venta.html
@@ -22,14 +22,18 @@
 			<form role="form">
 				<div class="form-group">
 					 
-					<label >
+					<label>
 						<h1>Venta</h1>
 					</label><br>
-					<label for="exampleInputPassword1">
+					<label >
 						vendedor:
 					</label>
-					<input type="text" class="form-control" id="vendedor" disabled="disabled" placeholder="Admin">
-					<input type="text" class="form-control" id="doc" disabled="disabled" placeholder="Doc">
+					<select class="form-control" id="vendedor">
+						<option>Seleccione Categoría</option>
+						</select><br>
+					<select class="form-control" id="doc">
+						<option>Seleccione Doc</option>
+						</select>
 				</div>
 				<div class="form-group">
 					<input type="text" class="form-control" id="nomcliente" placeholder="Nombre:">
@@ -90,5 +94,6 @@
 	<script type="text/javascript" src="recursos/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="recursos/js/bootbox.min.js"></script>
 	<script type="text/javascript" src="recursos/js/bootbox.locales.min.js"></script>
+	<script type="text/javascript" src="recursos/js/venta.js"></script>
   </body>
 </html>
