--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Venta de Productos</title>
 <link rel="stylesheet"
 	href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 	integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
@@ -60,6 +60,7 @@
 			</div>
 		</div>
 	</div>
+
 
 	<script type="text/javascript" src="recursos/js/jquery-3.4.0.min.js"></script>
 	<script type="text/javascript" src="recursos/js/bootstrap.min.js"></script>
