--- a/WebContent/venta.html
+++ b/WebContent/venta.html
@@ -108,8 +108,11 @@
 		<input type="text" class="form-control" id="prevent">
 		<input type="text" id="precioto" name="precioto"  style="display:none" ><br>
 		<label><h4>Cantidad:</h4></label><br>
-		<input type="text" class="form-control" id="cantvent" onkeyup="operacion()"><br>
-		<button id="botonadd"  class="btn btn-primary">
+		<input type="text" class="form-control" id="cantvent" onkeyup="operacion()"  ><br>
+		<input type="text" id="cantold" name="cantold" style="display:none"  >
+		<input type="text" id="cantnew" name="cantnew"  style="display:none" >
+		
+		<button id="botonadd"  class="btn btn-primary" >
 					Agregar
 				</button>
 		</div>
